cmake_minimum_required(VERSION 3.24)
project(Implementation_of_algorythms_)

set(CMAKE_CXX_STANDARD 23)

add_executable(Implementation_of_algorythms_ main.cpp)
add_executable(sortings sortings.cpp)
add_executable(namespaces namespaces.cpp)
add_executable(pointers pointers.cpp)
add_executable(different_function_testing different_function_testing.cpp)


